Bug 1439004 - Fix build breakage when ENABLE_WASM_SATURATING_TRUNC_OPS is not defined. r=luke